2007-02-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: gnome-icon-theme depends on
	intltool (closes #364895)

2007-02-09  Frederic Peters  <fpeters@0d.be>

	* jhbuild/commands/sanitcheck.py: sanity checks for cvs, svn and git
	(the right one, not the GNU Interactive Tools) (closes: #348268)

2007-02-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: libgnomecups now depends on
	gnome-common (closes #364853)

2007-02-09  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.18.modules: gnome-games now depends on
	gnome-python-desktop (closes #406016)

2007-02-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/frontends/autobuild.py, jhbuild/frontends/terminal.py,
	jhbuild/versioncontrol/svn.py: show subversion conflicts (closes
	#400775)

2007-02-07  Frederic Peters  <fpeters@0d.be>

	* jhbuild/utils/packagedb.py: fixed typo (closes #405237, patch by
	Mariano Suárez-Alvarez)

2007-02-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-2.16.modules: branched atk and gail (closes #395217,
	patch by Christian Kirbach)

2007-02-06  Christian Kirbach  <Christian.Kirbach@googlemail.com>

	* modulesets/gnome-2.16.modules: xchat-gnome now depends
	on gnome-doc-utils
	* modulesets/gnome-2.18.modules: Evolution, xchat-gnome,
	gnome-keyring-manager, gnome-terminal and gconf-editor now depend
	on gnome-doc-utils

2007-02-05  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/freedesktop-2.18.modules:
	* modulesets/freedesktop.modules: Added goocanvas.

2007-02-05  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.18.modules: gnome-vfsmm (C++): Use the gnome-2-18 branch, 
	because trunk must now be for gnome 2.19/2.20 because I forgot to do tarball 
	releases with the API additions before the API freeze. 

2007-02-05  Frederic Peters  <fpeters@0d.be>

	* modulesets/bootstrap.modules: updated pyrex version since 0.9.4.1 has
	been removed from the website. (closes #404473)
