@@ -1,5 +1,10 @@
 2007-02-09  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/modtypes/tarball.py, jhbuild/versioncontrol/tarball.py: added
+	support for zip files (closes #406747)
+
+2007-02-09  Frederic Peters  <fpeters@0d.be>
+
 	* modulesets/gnome-2.18.modules: gnome-icon-theme depends on
 	intltool (closes #364895)
 
